examp in windows

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
             var elem = document.getElementById("slot");
             if (OS == "windows") {
+                window.location.href = "https://example.com";
                 //elem.innerHTML = '<img src="https://github.com/eman-insilico/AR-Quick-Look-examples/raw/master/Face%20tracking%20icon.JPG" width="250" height="250">';
             } else if (OS == "android") {
                 //window.location.href = "http://example.com";
