mas os ar content added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             } else if (OS == "android") {
                 //window.location.href = "http://example.com";
             } else {
-                window.location.href = "https://example.com";
+                elem.innerHTML = '<a href="https://github.com/eman-insilico/WebAR-Quick-Look-examples/blob/master/lion%20clock%20100k.usdz?raw=true" rel="ar"> \
+                <img src="https://github.com/eman-insilico/AR-Quick-Look-examples/raw/master/lion%20clock%20icon.jfif" width="250" height="250"> \
+                </a>'
             }
         }
     </script>
