--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             console.log(OS);
             alert(OS);
 
+            window.location.href = "android.html"
+            /*    
             var elem = document.getElementById("slot");
             if (OS == "windows") {
                 window.location.href = "https://example.com";
@@ -32,7 +34,7 @@
                 elem.innerHTML = '<a href="https://github.com/eman-insilico/AR-Quick-Look-examples/raw/master/Angry%20guy%20animation.reality" rel="ar"> \
                 <img src="https://github.com/eman-insilico/AR-Quick-Look-examples/raw/master/lion%20clock%20icon.jfif" width="250" height="250"> \
                 </a>'
-            }
+            }*/
         }
     </script>
 
