--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             console.log(OS);
             alert(OS);
 
-            window.location.href = "android.html"
+            window.location.href = "androidAR.html"
             /*    
             var elem = document.getElementById("slot");
             if (OS == "windows") {
