--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
             console.log(OS);
             alert(OS);
 
-            window.location.href = "androidAR.html"
-            /*    
-            var elem = document.getElementById("slot");
+
+            window.location.href = "https://example.com";
+            /*var elem = document.getElementById("slot");
             if (OS == "windows") {
                 window.location.href = "https://example.com";
                 //elem.innerHTML = '<img src="https://github.com/eman-insilico/AR-Quick-Look-examples/raw/master/Face%20tracking%20icon.JPG" width="250" height="250">';
             } else if (OS == "android") {
-                //window.location.href = "http://example.com";
+                window.location.href = "http://example.com";
             } else {
+                window.location.href = "http://example.com";
+                
                 elem.innerHTML = '<a href="https://github.com/eman-insilico/AR-Quick-Look-examples/raw/master/Angry%20guy%20animation.reality" rel="ar"> \
                 <img src="https://github.com/eman-insilico/AR-Quick-Look-examples/raw/master/lion%20clock%20icon.jfif" width="250" height="250"> \
-                </a>'
-            }*/
+                </a>' */
+        }
         }
     </script>
 
