--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             alert(OS);
 
 
-            window.location.href = "https://example.com";
+            window.location.href = "cross_platf_ARjs.html";
             /*var elem = document.getElementById("slot");
             if (OS == "windows") {
                 window.location.href = "https://example.com";
