--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -6,7 +6,7 @@
 
 <body>
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-    <a-scene arjs>
+    <a-scene embedded arjs>
         <a-box position='0 0 0' material='opacity: 0.5;'></a-box>
         <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
