--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -3,11 +3,37 @@
 <head>
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+
+    <style>
+        .arjs-loader {
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 9999;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        .arjs-loader div {
+            text-align: center;
+            font-size: 1.25em;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
+
+    <div class="arjs-loader">
+        <div>Loading, please wait...</div>
+    </div>
+
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-    <a-scene embedded arjs="trackingMethod: best;" vr-mode-ui="enabled: false;">
+    <a-scene embedded arjs="trackingMethod: best;">
         <a-nft type="nft" url="marker" smooth="true" smoothCount="11" smoothTolerance=".01" smoothThreshold="5" size="0.184">
             <a-box position='0 0 0' material='opacity: 0.5;'></a-box>
         </a-nft>
