--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 
-<body>
+<body style="margin : 0px; overflow: hidden;">
 
     <div class="arjs-loader">
         <div>Loading, please wait...</div>
