--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -34,7 +34,7 @@
 
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
     <a-scene embedded arjs="trackingMethod: best;">
-        <a-nft type="nft" url="marker" smooth="true" smoothCount="11" smoothTolerance=".01" smoothThreshold="5" size="0.184">
+        <a-nft type="nft" vr-mode-ui="enabled: false;" url="marker" smooth="true" smoothCount="11" smoothTolerance=".01" smoothThreshold="5" size="0.184">
             <a-box position='0 0 0' material='opacity: 0.5;'></a-box>
         </a-nft>
     </a-scene>
