--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -33,7 +33,7 @@
     </div>
 
     <a-scene embedded arjs="trackingMethod: best;">
-        <a-nft type="nft" vr-mode-ui="enabled: false;" url="marker.PxGZ2hS3Cq8" smooth="true" smoothCount="11" smoothTolerance=".01" smoothThreshold="5" size="0.184">
+        <a-nft type="nft" vr-mode-ui="enabled: false;" url="https://github.com/CapSparkle/AR-NewYear/tree/main/marker.pinball" smooth="true" smoothCount="11" smoothTolerance=".01" smoothThreshold="5" size="0.184">
             <a-box position='0 0 0' material='opacity: 0.5;'></a-box>
         </a-nft>
     </a-scene>
