--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -32,8 +32,8 @@
         <div>Loading, please wait...</div>
     </div>
 
-    <a-scene embedded arjs="trackingMethod: best;">
-        <a-nft type="nft" vr-mode-ui="enabled: false;" url="/marker/pinball" smooth="true" smoothCount="11" smoothTolerance=".01" smoothThreshold="5" size="0.184">
+    <a-scene embedded arjs="trackingMethod: best;" vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;">
+        <a-nft type="nft" url="/marker/pinball" smooth="true" smoothCount="11" smoothTolerance=".01" smoothThreshold="5" size="0.184">
             <a-box position='0 0 0' material='opacity: 0.5;'></a-box>
         </a-nft>
     </a-scene>
