--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -31,10 +31,20 @@
     <div class="arjs-loader">
         <div>Loading, please wait...</div>
     </div>
-
+    <!--
     <a-scene embedded arjs="trackingMethod: best;" vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;">
         <a-nft type="nft" url="/marker/pinball" smooth="true" smoothCount="11" smoothTolerance=".01" smoothThreshold="5" size="0.184">
             <a-box position='0 0 0' material='opacity: 0.5;'></a-box>
         </a-nft>
+    </a-scene>
+    -->
+    <a-scene vr-mode-ui='enabled: false;' renderer="logarithmicDepthBuffer: true;" embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
+
+        <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
+        <a-nft type='nft' url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex' smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
+            <a-entity gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf' scale="5 5 5" position="50 150 -100">
+            </a-entity>
+        </a-nft>
+        <a-entity camera></a-entity>
     </a-scene>
 </body>
