--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -34,7 +34,8 @@
 
     <a-scene embedded arjs="trackingMethod: best;" vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;">
         <a-nft type="nft" url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/CapSparkle/AR-NewYear/main/marker/pinball' smooth="true" smoothCount="11" smoothTolerance=".01" smoothThreshold="5">
-            <a-box position='0 0 0 ' material='opacity: 0.5; '></a-box>
+            <a-entity gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf' scale="5 5 5" position="50 150 -100">
+            </a-entity>
         </a-nft>
     </a-scene>
     <!--
