--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -32,9 +32,24 @@
         <div>Loading, please wait...</div>
     </div>
 
+    <script type="text/javascript">
+        var output = document.createElement('pre');
+        document.body.appendChild(output); // Reference to native method(s) 
+        var oldLog = console.log;
+        console.log = function(...items) {
+            // Call native method first 
+            oldLog.apply(this, items); // Use JSON to transform objects, all others display normally 
+            items.forEach((item, i) => {
+                items[i] = (typeof item === 'object' ? JSON.stringify(item, null, 4) : item);
+            });
+            output.innerHTML += items.join(' ') + '<br />';
+        };
+    </script>
+
+
     <a-scene embedded arjs="trackingMethod: best;" vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;">
         <a-nft type="nft" url='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/CapSparkle/AR-NewYear/main/marker/pinball' smooth="true" smoothCount="7" smoothTolerance=".01" smoothThreshold="5">
-            <a-entity gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf' scale="5 5 5" position="50 150 -100">
+            <a-entity gltf-model='https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf' scale="5 5 5" position="10 15 -20">
             </a-entity>
         </a-nft>
     </a-scene>
