--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -40,7 +40,7 @@
     <script type="text/javascript">
         window.onmessage = function(event) {
             var elem = document.getElementById("log");
-            elem.innerHTML = event.innerHTML;
+            elem.innerHTML = event.data;
 
 
             // Call native method first 
