--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -28,11 +28,11 @@
 
     <script type="text/javascript">
         /*console.defaultLog = console.log.bind(console);
-                                                                console.logs = [];
-                                                                console.log = function() {
-                                                                    console.defaultLog.apply(console, arguments);
-                                                                    console.logs.push(Array.from(arguments));
-                                                                };*/
+                                                                                console.logs = [];
+                                                                                console.log = function() {
+                                                                                    console.defaultLog.apply(console, arguments);
+                                                                                    console.logs.push(Array.from(arguments));
+                                                                                };*/
 
         ConsoleListener.on("log", function() {
             var elem = document.getElementById("log_placeHolder");
@@ -63,7 +63,7 @@
     </div>
 
 
-    <div class="log_placeHolder">
+    <div id="log_placeHolder">
         <div>here is log.</div>
     </div>
 
