--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -28,27 +28,27 @@
 
     <script type="text/javascript">
         /*console.defaultLog = console.log.bind(console);
-                                                                                console.logs = [];
-                                                                                console.log = function() {
-                                                                                    console.defaultLog.apply(console, arguments);
-                                                                                    console.logs.push(Array.from(arguments));
-                                                                                };*/
+                                                                                        console.logs = [];
+                                                                                        console.log = function() {
+                                                                                            console.defaultLog.apply(console, arguments);
+                                                                                            console.logs.push(Array.from(arguments));
+                                                                                        };*/
 
         ConsoleListener.on("log", function() {
             var elem = document.getElementById("log_placeHolder");
             var a = arguments
             switch (a.length) {
                 case 0:
-                    elem.textContent = "<div>" + "nothing" + "</div>";
+                    elem.textContent = "nothing";
                     break;
                 case 1:
-                    elem.textContent = "<div>" + a[0] + " | " + "</div>";
+                    elem.textContent = a[0] + " | ";
                     break;
                 case 2:
-                    elem.textContent = "<div>" + a[0] + " | " + a[1] + " | " + "</div>";
+                    elem.textContent = a[0] + " | " + a[1] + " | ";
                     break;
                 default:
-                    elem.textContent = "<div>" + a[0] + " | " + a[1] + " | " + "</div>";
+                    elem.textContent = a[0] + " | " + a[1] + " | ";
                     break;
             }
         });
