--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -27,13 +27,6 @@
     </style>
 
     <script type="text/javascript">
-        /*console.defaultLog = console.log.bind(console);
-                                                                                        console.logs = [];
-                                                                                        console.log = function() {
-                                                                                            console.defaultLog.apply(console, arguments);
-                                                                                            console.logs.push(Array.from(arguments));
-                                                                                        };*/
-
         ConsoleListener.on("log", function() {
             var elem = document.getElementById("log_placeHolder");
             var a = arguments
@@ -44,8 +37,21 @@
                 case 1:
                     elem.textContent = a[0] + " | ";
                     break;
-                case 2:
+                default:
                     elem.textContent = a[0] + " | " + a[1] + " | ";
+                    break;
+            }
+        });
+
+        ConsoleListener.on("warn", function() {
+            var elem = document.getElementById("log_placeHolder");
+            var a = arguments
+            switch (a.length) {
+                case 0:
+                    elem.textContent = "nothing";
+                    break;
+                case 1:
+                    elem.textContent = a[0] + " | ";
                     break;
                 default:
                     elem.textContent = a[0] + " | " + a[1] + " | ";
