--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -24,6 +24,15 @@
             font-size: 1.25em;
             color: white;
         }
+        
+        div.sticky {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;
+            padding: 5px;
+            background-color: #cae8ca;
+            border: 2px solid #4CAF50;
+        }
     </style>
 
     <script type="text/javascript">
@@ -69,7 +78,7 @@
     </div>
 
 
-    <div id="log_placeHolder">
+    <div class="sticky" id="log_placeHolder">
         <div>here is log.</div>
     </div>
 
