--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
 <head>
+    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <script src="https://rawcdn.githack.com/ianpgall/js-console-listener/6658312b1e030c983b6d2fd7a054b6dcf6f7c454/console-listener.js"></script>
