--- a/cross_platf_ARjs.html
+++ b/cross_platf_ARjs.html
@@ -2,6 +2,7 @@
 
 <head>
     <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+    <META HTTP-EQUIV="EXPIRES" CONTENT="Mon, 22 Jul 2002 11:12:01 GMT">
 
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
@@ -38,53 +39,55 @@
     </style>
 
     <script type="text/javascript">
-        ConsoleListener.on("log", function() {
-            var elem = document.getElementById("log_placeHolder");
-            var a = arguments
-            switch (a.length) {
-                case 0:
-                    elem.textContent = "nothing";
-                    break;
-                case 1:
-                    elem.textContent = a[0] + " | ";
-                    break;
-                default:
-                    elem.textContent = a[0] + " | " + a[1] + " | ";
-                    break;
-            }
-        });
+        window.onload = function() {
+            ConsoleListener.on("log", function() {
+                var elem = document.getElementById("log_placeHolder");
+                var a = arguments
+                switch (a.length) {
+                    case 0:
+                        elem.textContent = "nothing";
+                        break;
+                    case 1:
+                        elem.textContent = a[0] + " | ";
+                        break;
+                    default:
+                        elem.textContent = a[0] + " | " + a[1] + " | ";
+                        break;
+                }
+            });
 
-        ConsoleListener.on("warn", function() {
-            var elem = document.getElementById("log_placeHolder");
-            var a = arguments
-            switch (a.length) {
-                case 0:
-                    elem.textContent = "nothing";
-                    break;
-                case 1:
-                    elem.textContent = a[0] + " | ";
-                    break;
-                default:
-                    elem.textContent = a[0] + " | " + a[1] + " | ";
-                    break;
-            }
-        });
+            ConsoleListener.on("warn", function() {
+                var elem = document.getElementById("log_placeHolder");
+                var a = arguments
+                switch (a.length) {
+                    case 0:
+                        elem.textContent = "nothing";
+                        break;
+                    case 1:
+                        elem.textContent = a[0] + " | ";
+                        break;
+                    default:
+                        elem.textContent = a[0] + " | " + a[1] + " | ";
+                        break;
+                }
+            });
 
-        ConsoleListener.on("info", function() {
-            var elem = document.getElementById("log_placeHolder");
-            var a = arguments
-            switch (a.length) {
-                case 0:
-                    elem.textContent = "nothing";
-                    break;
-                case 1:
-                    elem.textContent = a[0] + " | ";
-                    break;
-                default:
-                    elem.textContent = a[0] + " | " + a[1] + " | ";
-                    break;
-            }
-        });
+            ConsoleListener.on("info", function() {
+                var elem = document.getElementById("log_placeHolder");
+                var a = arguments
+                switch (a.length) {
+                    case 0:
+                        elem.textContent = "nothing";
+                        break;
+                    case 1:
+                        elem.textContent = a[0] + " | ";
+                        break;
+                    default:
+                        elem.textContent = a[0] + " | " + a[1] + " | ";
+                        break;
+                }
+            });
+        }
     </script>
 
 </head>
