--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 
 <head>
-
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js">
+    </script>
+    <script type="text/javascript">
+        function takeshot() {
+            let div = document.getElementById('ARwindow');
+            html2canvas(div).then(
+                function(canvas) {
+                    document.getElementById('output').appendChild(canvas);
+                })
+        }
+    </script>
 </head>
 
 <body>
-    <iframe src="https://mywebar.com/p/Project_0_4887" style="
+    <div id="ARwindow">
+        <button onclick="takeshot()">
+        <img src="photo_camera.jpg" style="
+        position: absolute;
+        z-index: 2;
+        width: 5pc;
+        height: 5pc;">
+        </button>
+        <iframe src="https://mywebar.com/p/Project_0_4887" style="
     position: fixed;
     top: 0px;
     bottom: 0px;
@@ -15,7 +33,10 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    z-index: 999999;
+    z-index: 1;
     height: 100%;
   " allow="camera; accelerometer; vr"> Your browser does not support embedded content </iframe>
+    </div>
+
+    <div id="output"></div>
 </body>
