setup transparent photo to button

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 
 <body>
     <div id="ARwindow">
-        <button onclick="alertF()">
-        <img src="photo_camera.jpg" style="
+        <button onclick="alertF()" style="outline: none;
+        background-color: transparent;
+        ">
+        <img src="t2.png" style="
         position: absolute;
         z-index: 2;
         width: 5pc;
-        height: 5pc;
+        height: 4pc;
         left: 50%;
         top: 100%;
         margin-left: -2.5pc;
